Fix for the following: The vertical space between "Bugfixes:" and the item list of bugfixes is too big. It is currently equivalent to the vertical space between two block elements that are distinct (e.g. two pragraphs). But in an item lists, the introduction and the items belong together.

--- a/docs/css/triply.css
+++ b/docs/css/triply.css
@@ -4,3 +4,7 @@ code {
   padding: .3em .4em !important;
   border-radius: .3em !important;
 }
+
+ p ~ ul {
+  margin-top: -20px;
+}
